--- a/view/listUser.html
+++ b/view/listUser.html
@@ -22,7 +22,7 @@
             <td>
                 <img src="{{ user.url }}" alt="Photo">
             </td>
-            <td><span class="name">{{ user.fName }} {{ user.lName }} {{user.id}}</span>
+            <td><span class="name">{{ user.fName }} {{ user.lName }}</span>
                 <br><span class="title">{{ user.title }}</span>
             </td>
             <td>{{user.directReports.length}}</td>
