--- a/view/showUser.html
+++ b/view/showUser.html
@@ -9,6 +9,11 @@
                 <td><a href="#/editUser/{{newUser.id}}"><span class="glyphicon glyphicon-edit"></span></a></td>
             </tr>
             <tr>
+                <td>ID: </td>
+                <td>{{newUser.id}}</td>
+                <td></td>
+            </tr>
+            <tr>
                 <td>Age: </td>
                 <td>{{newUser.age}}</td>
                 <td></td>
